기본인 틀 선

--- a/project_template.html
+++ b/project_template.html
@@ -32,8 +32,8 @@
                 <td>
                     <div id="container">
                         <ul class="menu">
-                            <li><a href="index.html" title="index">INDEX</a></li>
-                            <li><a href="insert.html" title="insert">INSERT</a></li>
+                            <li><a href="#" title="index">INDEX</a></li>
+                            <li><a href="#" title="insert">INSERT</a></li>
                             <li><a href="#" title="bookinfo">BOOK</a></li>
                         </ul>
                     </div>
