--- a/insert.html
+++ b/insert.html
@@ -34,7 +34,7 @@
                         <ul class="menu">
                             <li><a href="index.html" title="index">INDEX</a></li>
                             <li><a href="insert.html" title="insert" class="current">INSERT</a></li>
-                            <li><a href="#" title="bookinfo">BOOK</a></li>
+                            <li><a href="book_info.html" title="bookinfo">BOOK</a></li>
                         </ul>
                     </div>
                 </td>
