--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
                         <ul class="menu">
                             <li><a href="index.html" title="index">INDEX</a></li>
                             <li><a href="insert.html" title="insert">INSERT</a></li>
-                            <li><a href="#" title="bookinfo">BOOK</a></li>
+                            <li><a href="book_info.html" title="bookinfo">BOOK</a></li>
                         </ul>
                     </div>
                 </td>
             </tr>
             <tr class-"clsMain">
                 <td>
-                    <div>main</div>
+                    <div>calendar</div>
+                    <div>current book info</div>
                 </td>
             </tr>
         </table>
