--- a/book_info.html
+++ b/book_info.html
@@ -1,3 +1,4 @@
+
 <html>
     <head>
         <title> INDEX </title>
@@ -17,12 +18,12 @@
                 }
                 .menu a.right { padding-right:19px; }
                 .menu a:hover { background:#2E4560; }
-                .menu a.current { color:#2E4560; background:#fff; }
-                .menu a.current:hover { color:#2E4560; background:#fff; }
+                .menu a.currnt { color:#2E4560; background:#fff; }
+                .menu a.currnt:hover { color:#2E4560; background:#fff; }
             table
                 .main { width:480px; height:640px; margin:0px;}
                 .clsHead { height : 45px; }
-                .clsMain { height : 595px; }
+                .clsMain { height : 595px; position:absolute; top:80px;}
         </style>
     </head>
     
@@ -34,17 +35,17 @@
                         <ul class="menu">
                             <li><a href="index.html" title="index">INDEX</a></li>
                             <li><a href="insert.html" title="insert">INSERT</a></li>
-                            <li><a href="book_info.html" title="bookinfo" class="current">BOOK</a></li>
+                            <li><a href="book_info.html" title="bookinfo">BOOK</a></li>
                         </ul>
                     </div>
                 </td>
             </tr>
             <tr class="clsMain">
                 <td>
-                    <div>selct search</div>
-                    <div>graph</div>
-                    <div>book information</div>
-                    <div>delete/adjust info query</div>
+                    <div>select search</div>
+                    <div>percent</div>
+                    <div>info</div>
+                    <div>del adjust button</div>
                 </td>
             </tr>
         </table>
