--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             table
                 .main { width:480px; height:640px; margin:0px;}
                 .clsHead { height : 45px; }
-                .clsMain { height : 595px; }
+                .clsMain { height : 595px; position:absolute; top:80px;}
         </style>
     </head>
     
@@ -39,7 +39,7 @@
                     </div>
                 </td>
             </tr>
-            <tr class-"clsMain">
+            <tr class="clsMain">
                 <td>
                     <div>calendar</div>
                     <div>current book info</div>
