--- a/insert.html
+++ b/insert.html
@@ -22,7 +22,7 @@
             table
                 .main { width:480px; height:640px; margin:0px;}
                 .clsHead { height : 45px; }
-                .clsMain { height : 595px; margin:0; }
+                .clsMain { height : 595px; position:absolute; top:80px; }
         </style>
     </head>
     
@@ -41,7 +41,7 @@
             </tr>
             <tr class="clsMain">
                 <td>
-                    <div>
+                    <div style="width:100%; height:200px; overflow:scroll; padding:10px; border:3; border-style:solid; border-color:#EBEBEB; overflow:auto">
                         <form method="post" action="insert_query.php">
                         	<label for="name">제목&nbsp&nbsp&nbsp</label>
                         	<input type="text" id="name" name="name"/> <br/> 
