--- a/examples/table_exple.html
+++ b/examples/table_exple.html
@@ -1,7 +1,7 @@
 <style type="text/css">
 <!--
 
-body,td,div {font-size:9pt;font-family:굴림;}
+body,td,div {font-size:9pt;font-family:Arial, sans-serif;}
 .Box_000{border:solid 0;padding:0;text-align:justify;}
 .Box_001{width:500px;border:solid 1px;border-color:#E7E7E7;padding:5px 5px 2px 5px;background-color:#F4F4F4;text-align:justify;}
 .Box_002{width:500px;border:solid 1px;border-color:#DDEAA8;padding:5px 5px 2px 5px;background-color:#FBFDF1;text-align:justify;}
