--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 }
                 .menu a.right { padding-right:19px; }
                 .menu a:hover { background:#2E4560; }
-                .menu a.currnt { color:#2E4560; background:#fff; }
-                .menu a.currnt:hover { color:#2E4560; background:#fff; }
+                .menu a.current { color:#2E4560; background:#fff; }
+                .menu a.current:hover { color:#2E4560; background:#fff; }
             table
                 .main { width:480px; height:640px; margin:0px;}
                 .clsHead { height : 45px; }
@@ -32,9 +32,9 @@
                 <td>
                     <div id="container">
                         <ul class="menu">
-                            <li><a href="index.html" title="index">INDEX</a></li>
-                            <li><a href="insert.html" title="insert">INSERT</a></li>
-                            <li><a href="book_info.html" title="bookinfo">BOOK</a></li>
+                            <li><a href="index.html" title="index" class="current">INDEX</a></li>
+                            <li><a href="insert.php" title="insert">INSERT</a></li>
+                            <li><a href="book_info.php" title="bookinfo">BOOK</a></li>
                         </ul>
                     </div>
                 </td>
