--- a/examples/table_exple.html
+++ b/examples/table_exple.html
@@ -3,7 +3,7 @@
 
 body,td,div {font-size:9pt;font-family:Arial, sans-serif;}
 .Box_000{border:solid 0;padding:0;text-align:justify;}
-.Box_001{width:500px;border:solid 1px;border-color:#E7E7E7;padding:5px 5px 2px 5px;background-color:#F4F4F4;text-align:justify;}
+.Box_001{border:solid 1px;border-color:#E7E7E7;padding:5px 5px 2px 5px;background-color:#F4F4F4;text-align:justify;}
 .Box_002{width:500px;border:solid 1px;border-color:#DDEAA8;padding:5px 5px 2px 5px;background-color:#FBFDF1;text-align:justify;}
 .Box_003{width:500px;border:solid 1px;border-color:#F9D5D5;padding:5px 5px 2px 5px;background-color:#FEF6F6;text-align:justify;}
 .Box_004{width:500px;border:solid 1px;border-color:#EFDAF4;padding:5px 5px 2px 5px;background-color:#FCF7FD;text-align:center;}
@@ -29,7 +29,7 @@ scrollbar-track-color: #FFFFFF;
 <center>
 
 <div class="Box_001" style="color:#696969">
-이쁜 테이블 입니다.<br />이쁜 테이블 입니다.
+이쁜 테이블 입니다.
 </div>
 <br />
 
